@startuml
'https://plantuml.com/class-diagram

abstract class BacDien{
    - double gia,min,max;
    - BacDien bacKeTiep;
    + BacDien (double gia,double min, double max)
    + {abstract} BacDien bacKeTiep(BacDien bac)
    + {abstract} double tinhTien(int sokWh, double[] tongTien)
}
class BacDienThuong{}
class BacDienCaoNhat{}

BacDien <|-- BacDienThuong
BacDien <|-- BacDienCaoNhat
BacDienThuong --> BacDien: kế tiếp
@enduml